--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <section>
       <a href="https://www.instagram.com/naykeashish?igsh=OXF0Nm52cDJhOHox">
-  <img src="IMG_20230710_210324.jpg" alt="my photo" height="100" allign="right">
+  <img src="profile img.png">
       </a>
   <pre>NAME : <b>ASHISH NAYKE</b>
 AGE : 21+ Yr OLD
