--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <section>
       <a href="https://www.instagram.com/naykeashish?igsh=OXF0Nm52cDJhOHox">
-  <img src="https://github.com/AshishNayke/2nd-repo-01-25/blob/937387dbacab538094db2ec1e53b6904f9743af1/profile_img.png">
+  <img src="profile img.png">
       </a>
   <pre>NAME : <b>ASHISH NAYKE</b>
 AGE : 21+ Yr OLD
