--- a/index.html
+++ b/index.html
@@ -1,139 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art Gallery</title>
+    <title>Art&You</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f7f7f7;
-            color: #333;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 1rem 2rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 1.5rem;
-        }
-
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 1rem;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #fff;
-            font-size: 1rem;
-        }
-
         .hero {
-            background: url('https://via.placeholder.com/1500x500') no-repeat center center/cover;
-            height: 50vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            color: #fff;
+            background-image: url('https://via.placeholder.com/1920x1080');
+            background-size: cover;
+            background-position: center;
         }
-
-        .hero h2 {
-            font-size: 2.5rem;
-            margin: 0;
+        .hero-slider {
+            animation: slide 12s infinite;
         }
-
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 1.5rem;
-            padding: 2rem;
+        @keyframes slide {
+            0%, 100% { transform: translateX(0); }
+            33% { transform: translateX(-100%); }
+            66% { transform: translateX(-200%); }
         }
-
-        .gallery-item {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s;
+        .custom-button {
+            transition: transform 0.2s, box-shadow 0.2s;
         }
-
-        .gallery-item:hover {
-            transform: translateY(-5px);
-        }
-
-        .gallery-item img {
-            width: 100%;
-            height: auto;
-            display: block;
-        }
-
-        .gallery-item h3 {
-            margin: 1rem;
-            font-size: 1.2rem;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem;
-            margin-top: 2rem;
+        .custom-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
-<body>
-    <header>
-        <h1>Online Art Gallery</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+
+<body class="font-sans antialiased">
+    <!-- Navbar -->
+    <nav class="bg-gray-800 text-white p-4 sticky top-0 z-10 shadow-md">
+        <div class="container mx-auto flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold">Art&You</a>
+            <ul class="flex space-x-6">
+                <li><a href="#gallery" class="hover:text-gray-400">Gallery</a></li>
+                <li><a href="#forum" class="hover:text-gray-400">Forum</a></li>
+                <li><a href="#vault" class="hover:text-gray-400">Vault</a></li>
+                <li><a href="#about" class="hover:text-gray-400">About Us</a></li>
+                <li><a href="#contact" class="hover:text-gray-400">Contact</a></li>
             </ul>
-        </nav>
-    </header>
+            <a href="#profile" class="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded">Profile</a>
+        </div>
+    </nav>
 
-    <section class="hero">
-        <h2>Discover Beautiful Art</h2>
-    </section>
-
-    <section class="gallery">
-        <div class="gallery-item">
-            <img src="https://via.placeholder.com/300" alt="Artwork">
-            <h3>Artwork Title 1</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="https://via.placeholder.com/300" alt="Artwork">
-            <h3>Artwork Title 2</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="https://via.placeholder.com/300" alt="Artwork">
-            <h3>Artwork Title 3</h3>
-        </div>
-        <div class="gallery-item">
-            <img src="https://via.placeholder.com/300" alt="Artwork">
-            <h3>Artwork Title 4</h3>
+    <!-- Hero Section -->
+    <section id="home" class="hero h-screen flex items-center justify-center text-white">
+        <div class="text-center">
+            <p class="text-lg mb-4">Welcome to Art&You, a world of creativity and connection!</p>
+            <div class="hero-slider flex overflow-hidden">
+                <h1 class="text-4xl md:text-6xl font-extrabold mb-4">Discover Stunning Artwork</h1>
+                <h1 class="text-4xl md:text-6xl font-extrabold mb-4">Bid and Own Masterpieces</h1>
+                <h1 class="text-4xl md:text-6xl font-extrabold mb-4">Join a Thriving Art Community</h1>
+            </div>
+            <a href="#gallery" class="custom-button bg-blue-600 hover:bg-blue-500 px-6 py-3 rounded text-lg">Explore Now</a>
         </div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Online Art Gallery. All rights reserved.</p>
+    <!-- Special Section -->
+    <section id="special" class="py-16 bg-white">
+        <div class="container mx-auto text-center">
+            <h2 class="text-4xl font-bold mb-12">Special Collection</h2>
+            <div class="flex justify-center space-x-4 overflow-x-auto snap-x">
+                <div class="snap-center shrink-0 bg-gray-200 p-6 rounded shadow-md w-72">
+                    <img src="https://via.placeholder.com/300" alt="Unique Artwork 1" class="w-full rounded">
+                    <h3 class="text-lg font-bold mt-4">Unique Artwork 1</h3>
+                    <p class="text-gray-600">Artist: Jane Doe</p>
+                    <p class="text-blue-600 font-bold mt-2">₹5,000</p>
+                    <button class="custom-button bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded mt-4">Buy Now</button>
+                    <button class="custom-button bg-yellow-500 hover:bg-yellow-400 text-white px-4 py-2 rounded mt-2">Bid</button>
+                </div>
+                <div class="snap-center shrink-0 bg-gray-200 p-6 rounded shadow-md w-72">
+                    <img src="https://via.placeholder.com/300" alt="Unique Artwork 2" class="w-full rounded">
+                    <h3 class="text-lg font-bold mt-4">Unique Artwork 2</h3>
+                    <p class="text-gray-600">Artist: John Smith</p>
+                    <p class="text-blue-600 font-bold mt-2">₹7,500</p>
+                    <button class="custom-button bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded mt-4">Buy Now</button>
+                    <button class="custom-button bg-yellow-500 hover:bg-yellow-400 text-white px-4 py-2 rounded mt-2">Bid</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gallery Section -->
+    <section id="gallery" class="py-16 bg-gray-100">
+        <div class="container mx-auto text-center">
+            <h2 class="text-4xl font-bold mb-12">Gallery</h2>
+            <div>
+                <h3 class="text-2xl font-semibold mb-4">Featured Art</h3>
+                <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                    <div class="bg-white rounded shadow-md overflow-hidden">
+                        <img src="https://via.placeholder.com/300" alt="Featured Artwork 1" class="w-full">
+                        <div class="p-4">
+                            <h3 class="text-lg font-bold">Featured Artwork</h3>
+                            <p class="text-gray-600">Artist Name</p>
+                            <p class="text-blue-600 font-bold mt-2">₹2,000</p>
+                        </div>
+                    </div>
+                    <div class="bg-white rounded shadow-md overflow-hidden">
+                        <img src="https://via.placeholder.com/300" alt="Featured Artwork 2" class="w-full">
+                        <div class="p-4">
+                            <h3 class="text-lg font-bold">Featured Artwork</h3>
+                            <p class="text-gray-600">Artist Name</p>
+                            <p class="text-blue-600 font-bold mt-2">₹3,000</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-12">
+                <h3 class="text-2xl font-semibold mb-4">Arts and Stories</h3>
+                <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                    <div class="bg-white rounded shadow-md overflow-hidden">
+                        <img src="https://via.placeholder.com/300" alt="Story Artwork 1" class="w-full">
+                        <div class="p-4">
+                            <h3 class="text-lg font-bold">Story Artwork</h3>
+                            <p class="text-gray-600">Artist Name</p>
+                            <p class="text-blue-600 font-bold mt-2">₹4,000</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-12">
+                <h3 class="text-2xl font-semibold mb-4">Art Supplies</h3>
+                <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                    <div class="bg-white rounded shadow-md overflow-hidden">
+                        <img src="https://via.placeholder.com/300" alt="Supply Item 1" class="w-full">
+                        <div class="p-4">
+                            <h3 class="text-lg font-bold">Art Supply</h3>
+                            <p class="text-gray-600">Brand Name</p>
+                            <p class="text-blue-600 font-bold mt-2">₹500</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Us Section -->
+    <section id="about" class="py-16 bg-white">
+        <div class="container mx-auto text-center grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+            <div>
+                <h2 class="text-4xl font-bold mb-8">About Us</h2>
+                <p class="text-lg text-gray-700">Art&You is a platform to connect artists and art lovers. Explore, interact, and join a community built on creativity and collaboration.</p>
+            </div>
+            <div>
+                <img src="https://via.placeholder.com/500" alt="Creator" class="rounded-lg shadow-md">
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 text-white py-6">
+        <div class="container mx-auto text-center">
+            <p>&copy; 2025 Art&You. All Rights Reserved.</p>
+        </div>
     </footer>
 </body>
+
 </html>
