--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         .hero {
-            background-image: url('https://via.placeholder.com/1920x1080');
+            background-image: url('bg.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -34,13 +34,13 @@
     <!-- Navbar -->
     <nav class="bg-gray-800 text-white p-4 sticky top-0 z-10 shadow-md">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold">Art&You</a>
+            <a href="index.html" class="text-2xl font-bold">Art&You</a>
             <ul class="flex space-x-6">
-                <li><a href="#gallery" class="hover:text-gray-400">Gallery</a></li>
-                <li><a href="#forum" class="hover:text-gray-400">Forum</a></li>
-                <li><a href="#vault" class="hover:text-gray-400">Vault</a></li>
-                <li><a href="#about" class="hover:text-gray-400">About Us</a></li>
-                <li><a href="#contact" class="hover:text-gray-400">Contact</a></li>
+                <li><a href="gallery.html" class="hover:text-gray-400">Gallery</a></li>
+                <li><a href="forum.html" class="hover:text-gray-400">Forum</a></li>
+                <li><a href="vault.html" class="hover:text-gray-400">Vault</a></li>
+                <li><a href="about.html" class="hover:text-gray-400">About Us</a></li>
+                <li><a href="contact.html" class="hover:text-gray-400">Contact</a></li>
             </ul>
             <a href="#profile" class="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded">Profile</a>
         </div>
@@ -55,7 +55,7 @@
                 <h1 class="text-4xl md:text-6xl font-extrabold mb-4">Bid and Own Masterpieces</h1>
                 <h1 class="text-4xl md:text-6xl font-extrabold mb-4">Join a Thriving Art Community</h1>
             </div>
-            <a href="#gallery" class="custom-button bg-blue-600 hover:bg-blue-500 px-6 py-3 rounded text-lg">Explore Now</a>
+            <a href="gallery.html" class="custom-button bg-blue-600 hover:bg-blue-500 px-6 py-3 rounded text-lg">Explore Now</a>
         </div>
     </section>
 
@@ -65,7 +65,7 @@
             <h2 class="text-4xl font-bold mb-12">Special Collection</h2>
             <div class="flex justify-center space-x-4 overflow-x-auto snap-x">
                 <div class="snap-center shrink-0 bg-gray-200 p-6 rounded shadow-md w-72">
-                    <img src="https://via.placeholder.com/300" alt="Unique Artwork 1" class="w-full rounded">
+                    <img src="art1.jpg" class="w-full rounded">
                     <h3 class="text-lg font-bold mt-4">Unique Artwork 1</h3>
                     <p class="text-gray-600">Artist: Jane Doe</p>
                     <p class="text-blue-600 font-bold mt-2">₹5,000</p>
@@ -73,7 +73,7 @@
                     <button class="custom-button bg-yellow-500 hover:bg-yellow-400 text-white px-4 py-2 rounded mt-2">Bid</button>
                 </div>
                 <div class="snap-center shrink-0 bg-gray-200 p-6 rounded shadow-md w-72">
-                    <img src="https://via.placeholder.com/300" alt="Unique Artwork 2" class="w-full rounded">
+                    <img src="art2.jpg" class="w-full rounded">
                     <h3 class="text-lg font-bold mt-4">Unique Artwork 2</h3>
                     <p class="text-gray-600">Artist: John Smith</p>
                     <p class="text-blue-600 font-bold mt-2">₹7,500</p>
